--- a/style.css
+++ b/style.css
@@ -12,12 +12,18 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   
+}
+h2{
+    margin:20px;
 }
 .main{
     background-color: white;
-    padding:40px;
-    width:500px;
-    height: 700px;
+    padding:20px;
+    border-radius: 20px;
+    /* width:500px;
+    height: 700px; */
+    margin: 20px;
 }
 .add{
     display: flex;
